# services/api/src/lib/auth-responses.ts
@@ -1,0 +1,5 @@
+import { z } from "@hono/zod-openapi";
+
+export const UnauthorizedSchema = z
+  .object({ error: z.literal("Unauthorized") })
+  .openapi("Unauthorized");
